<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="title_signUp">Sign Up</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="history">History</string>
    <string name="reminder">Reminder</string>
    <string name="settings">Settings</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Keep_me_logged_in">Keep me logged in</string>
    <string name="Login">Login:</string>
    <string name="ForgotPasswordMessage">We will send you a link to change your Password</string>
    <string name="ChangePasswordTitel">Change Password</string>
    <string name="NewPassword">New Password</string>
    <string name="RepeatNewPassword">Repeat New Password</string>
    <string name="TitelNewExpense">New Expense</string>
    <string-array name="expense_category">
        <item>Hobby</item>
        <item>Work</item>
        <item>other</item>
    </string-array>
    <string-array name="time_interval">
        <item>1 hour</item>
        <item>10 hours</item>
        <item>24 hours</item>
        <item>48 hours</item>
    </string-array>
    <string name="expenses">Expenses</string>
    <string-array name="sort_options">
        <item>Date</item>
        <item>Amount</item>
    </string-array>
    <string-array name="repeat_options">
        <item>Dont repeat</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="currency_options">
        <item>€ EUR</item>
        <item>$ USD</item>
        <item>₽ RUB</item>
    </string-array>
    <string name="logout_text"><u>Log Out</u></string>
    <string name="change_pw_text"><u>Change Password</u></string>

</resources>