<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.expensemanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.expensemanager.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_reminder"
        android:name="com.example.expensemanager.ui.reminder.ReminderFragment"
        android:label="@string/reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.expensemanager.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>